# uni-work

./: README.md
sem 1/algebra/P3_Manciu_Patricia/: main.py  output_2.txt  output_3.txt  output_4.txt  output_5.txt  output_6.txt
sem 1/analysis/homework/homework_11/: main.py
sem 1/analysis/homework/homework_5/: extra.py  main.py
sem 1/analysis/homework/homework_7/: main.py
sem 1/analysis/homework/homework_8/: main.py
sem 1/asc/labs/tema lab 2/: 1.asm  10.asm  10_2.asm  2.asm  3.asm  4.asm  5.asm  6.asm  7.asm  8.asm  9.asm
sem 1/asc/labs/tema lab 3/: 1.asm  2.asm  3.asm  4.asm  5.asm  6.asm  7.asm  8.asm
sem 1/asc/labs/tema lab 4/: 1.asm  2.asm  extra1.asm
sem 1/asc/labs/tema lab 5/: 2.asm
sem 1/asc/labs/tema lab 6/: 1.asm  2.asm
sem 1/asc/labs/tema lab 8/: lab8_1.asm  lab8_2.asm  lab8_3.asm  lab8_4.asm
sem 1/asc/practic/: CERINTE.docx
sem 1/fp/assignments/a1/: assignment.md  p1.py  p2.py  p3.py
sem 1/fp/assignments/a10/: assignment.md
sem 1/fp/assignments/a2/: assignment.md  main.py
sem 1/fp/assignments/a3/: assignment.md  main.py
sem 1/fp/assignments/a4/: assignment.md  backtracking.py  dynamic.py
sem 1/fp/assignments/a5/: assignment.md  main.py
sem 1/fp/assignments/a6/: assignment.md
sem 1/fp/assignments/a7/: assignment.md
sem 1/fp/assignments/a8/: assignment.md
sem 1/fp/assignments/a9/: assignment.md
sem 1/logica/: Exam-Computational_Logic-Subjects_2017-2018.doc
sem 2/ds/lab test prep/: test.ipynb  testtt.ipynb
sem 2/ds/lab test prep/.ipynb_checkpoints/: Lab Test 1-checkpoint.ipynb  test-checkpoint.ipynb
sem 2/dsa/labs/FixedCapBiMap/: App.cpp  CMakeLists.txt  ExtraTest.cpp  ExtraTest.h  FixedCapBiMap.cpp  FixedCapBiMap.h  FixedCapBiMapIterator.cpp
sem 2/dsa/labs/FixedCapBiMap/App.dSYM/Contents/Resources/DWARF/: App
sem 2/dsa/labs/SortedBag/: App.cpp  ExtendedTest.cpp  ShortTest.cpp  SortedBag.cpp  SortedBag.h  SortedBagIterator.cpp  SortedBagIterator.h
sem 2/dsa/labs/SortedBag L5/: App.cpp  CMakeLists.txt  ExtendedTest.cpp  ShortTest.cpp  SortedBag.cpp  SortedBag.h  SortedBagIterator.cpp  SortedBagIterator.h
sem 2/dsa/theory/: Notes DSA.docx
sem 2/graphs/labs/p1/: Documentation.txt  domain.py  main.py  (+2 more)
sem 2/oop/practic/ArtAuction/: CMakeLists.txt  Item.cpp  Item.h  Observer.h  Session.cpp  Session.h  Subject.h  User.cpp  User.h  items.txt  main.cpp  users.txt  window.cpp  window.h  window.ui
sem 2/oop/practic/DeliverNow/: CMakeLists.txt  DataManager.cpp  DataManager.h  courier.h  couriers.txt  courierwindow.cpp  courierwindow.h  courierwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  map.cpp  map.h  map.ui  package.h  packages.txt
sem 2/oop/practic/MicrobialWorld/: BacteriaTable.cpp  BacteriaTable.h  Bacterium.h  Biologist.h  CMakeLists.txt  Service.cpp  Service.h  bacteria.txt  biologists.txt  main.cpp  window.cpp  window.h  window.ui
sem 2/oop/practic/Research/: CMakeLists.txt  Data.cpp  Data.h  Observer.cpp  Observer.h  ideas.txt  juniorwindow.cpp  juniorwindow.h  juniorwindow.ui  main.cpp  seniorwindow.cpp  seniorwindow.h  seniorwindow.ui
sem 2/oop/practic/untitled/: CMakeLists.txt  Idea.cpp  Idea.h  IdeaTableModel.cpp  IdeaTableModel.h  Researcher.cpp  Researcher.h  Service.cpp  Service.h  main.cpp  researchers.txt  window.cpp  window.h  window.ui
sem 2/oop/test prep/test 1/Car Manager/: CMakeLists.txt  main.cpp
sem 2/oop/test prep/test 1/Car Manager/domain/: car.cpp  car.h
sem 2/oop/test prep/test 1/Car Manager/repository/: repo.cpp  repo.h
sem 2/oop/test prep/test 1/Car Manager/service/: service.cpp  service.h
sem 2/oop/test prep/test 1/Car Manager/ui/: ui.cpp  ui.h
sem 2/oop/test prep/test 1/Schools Manager/: CMakeLists.txt
sem 2/oop/test prep/test 1/Schools Manager/domain/: school.cpp  school.h
sem 2/oop/test prep/test 1/Schools Manager/repository/: DynamicVector.h  repo.cpp  repo.h
sem 2/oop/test prep/test 1/Schools Manager/service/: service.cpp  service.h
sem 2/oop/test prep/test 1/Schools Manager/ui/: ui.cpp  ui.h
sem 2/oop/test prep/test 1/Task Manager/: CMakeLists.txt  DynamicVector.h  main.cpp
sem 2/oop/test prep/test 1/Task Manager/domain/: Task.cpp  Task.h
sem 2/oop/test prep/test 1/Task Manager/repository/: Repository.cpp  Repository.h
sem 2/oop/test prep/test 1/Task Manager/service/: Service.cpp  Service.h
sem 2/oop/test prep/test 1/Task Manager/ui/: UI.cpp  UI.h
sem 2/oop/test prep/test 3/Search Engine/: CMakeLists.txt  domain.cpp  domain.h  gui.cpp  gui.h  gui.ui  input.txt  main.cpp  service.cpp  service.h
sem 2/oop/test prep/test 3/Task Manager/: CMakeLists.txt  Domain.cpp  Domain.h  Service.cpp  Service.h  gui.cpp  gui.h  gui.ui  input.txt  main.cpp
sem 2/oop/test prep/test 3/Weather/: CMakeLists.txt  Domain.cpp  Domain.h  Service.cpp  Service.h  gui.cpp  gui.h  gui.ui  input.txt  main.cpp
sem 2/oop/test prep/test 3/equations/: CMakeLists.txt  domain.cpp  domain.h  equations.txt  gui.cpp  gui.h  gui.ui  main.cpp  service.cpp  service.h
sem 2/os/EXAM/: 13_iunie_2024.txt
sem 3/databases/: Manciu Patricia-Ariana TEST 10.sql
sem 3/map/: README.md
sem 3/networks/: project _packet_tracer.pkt
sem 3/networks/lab2/: tcp_2_4_server.py  tcp_3_6_client.py  tcp_3_6_server.py  tcp_client.py  tcp_server.py  udp_client.py  udp_server.py
sem 3/networks/lab6/: client_basic.py  server_basic.py  tcp_2_4_client.cpp  tcp_2_4_client.py  tcp_server_more_clients.py
sem 3/networks/lab7/: lab7.pkt
sem 3/networks/packet tracer/: lab5.pkt  lab7_trial.pkt  test2024.pkt  testPacketTraces.pkt
sem 3/plf/lisp/: L1-1.lisp  L1-10.lisp  L1-11.lisp  L1-12.lisp  L1-13.lisp  L1-14.lisp  L1-15.lisp  L1-2.lisp  L1-3.lisp  L1-4.lisp  L1-5.lisp  L1-6.lisp  L1-7.lisp  L1-8.lisp  L1-9.lisp  L2-1.lisp  L2-10.lisp  L2-11.lisp  L2-12.lisp  L2-13.lisp  L2-14.lisp  L2-15.lisp  L2-16.lisp  L2-2.lisp  L2-3.lisp  L2-4.lisp  L2-5-7.lisp  L2-6.lisp  L2-8.lisp  L2-9.lisp  L3-7.lisp  practice.lisp  test-plf.lisp
sem 3/probalistica/MLabProjects/: bern.m  bino.m  geo.m  lab2.m  lab2_2.m  lab3_1.m  lab3_2.m  lab5.m  lab5_2.m  lab6.m  pascal.m  untitled2.m  untitled4.mlx
(+397 files in other folders)
